<resources>
    <string name="app_name">application</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_text">Fourier</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="load_wav">Upload</string>
    <string name="rec_stop">Rec/Stop</string>
    <string name="get_file">Process</string>
    <string name="token">token</string>
    <string name="credentials_sp">credentialsSP</string>
</resources>