<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rec_botton"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_stroke_orange_dark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/rec_stop"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGetPDF"
        app:layout_constraintEnd_toEndOf="@+id/btnGetPDF"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnGetPDF" />

    <Button
        android:id="@+id/btnLoadFile"
        android:layout_width="318dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button_stroke_orange_dark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/load_wav"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGetPDF"
        android:layout_width="318dp"
        android:layout_height="49dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_stroke_orange_dark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/get_file"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoadFile"
        app:layout_constraintEnd_toEndOf="@+id/btnLoadFile"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnLoadFile" />

    <ImageView
        android:id="@+id/fourier_background"
        android:layout_width="262dp"
        android:layout_height="288dp"
        android:contentDescription="TODO"
        android:scaleType="centerInside"
        android:src="@drawable/fourier2"
        app:layout_constraintBottom_toTopOf="@+id/rec_botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/txtLoadFilename"
        android:layout_width="289dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toTopOf="@+id/rec_botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourier_background"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>